fix overlay issues and add spacing on button

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@ $padding-spacing: 3rem;
   display: inline-block;
   padding: 0.35em 1.2em;
   border: 0.1em solid #ffffff;
-  margin: 0 0.3em 0.3em 0;
+  margin: 1rem 0.3em 0.3em 0;
   border-radius: 0.12em;
   box-sizing: border-box;
   text-decoration: none;
